web page ico and fixed z-index

--- a/react-navbar-3/src/App.css
+++ b/react-navbar-3/src/App.css
@@ -51,7 +51,6 @@ h1{
     left: 59.5%;
     top: 20%;
     background-color: #878741;
-    opacity: 20%;
     z-index: -1;
 }
 
